--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="d-flex w-100 vh-100 flex-column">
+  <div class="d-flex w-100 vh-100 flex-column bg-dark">
     <header class="bg-dark mb-auto border-bottom border-dark p-3">
       <div class="inner text-light d-flex justify-content-around flex-wrap">
         <h3 class="mx-2 mt-0 py-0 mb-1"><strong>Cover</strong></h3>
@@ -28,12 +28,13 @@
     <main role="main" class="text-light m-auto text-center p-3">
       <h1>Cover your page.</h1>
       <p class="lead mx-auto">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-      <p class="lead mx-auto"> <button class="btn btn-lg btn-light"><strong>Learn More</strong></button> </p>
+      <p class="lead mx-auto"> <button class="btn btn-lg btn-light shadow"> <a href="https://github.com/gefgu" target="_blank" class="text-decoration-none text-dark"> <strong>Learn More</strong></a></button> </p>
     </main>
 
-    <footer class="mt-auto bg-dark border-top border-dark px-3 pt-4 pb-1">
+    <footer class="mt-auto bg-dark border-top border-dark px-3 pt-2">
       <div class="inner text-light text-center my-auto">
-        <p class="lead text-muted">Made by <a href="https://github.com/gefgu" class="lead text-decoration-none text-light">Gustavo</a> with <a href="#" class="lead text-decoration-none text-light">Bootstrap</a></p>
+        <p class="lead text-muted pt-2">Made by <a href="https://gefgu.github.io/" target="_blank" class="lead text-decoration-none text-light">Gustavo</a> with <a href="https://getbootstrap.com/" target="_blank"
+            class="lead text-decoration-none text-light">Bootstrap</a></p>
       </div>
     </footer>
   </div>
